--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
               <p><strong id="result-text"></strong></p>
             </div>
             <div class="col-md-4" id="other-results">
-              <p id="result2" style="visibility: hidden;">Koala (0.2)</p>
-              <p id="result3" style="visibility: hidden;">Giraffe (0.1)</p>
-              <p id="result4" style="visibility: hidden;">Horse (0.01)</p>
-              <p id="result5" style="visibility: hidden;">Camel (0.001)</p>
-              <p id="result6" style="visibility: hidden;">Zebra (0.0012)</p>
+              <!-- All classes will be dynamically added here by script.js -->
             </div>
           </div>
         </div>
