change to dolphin

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
       <h4>Classes</h4>
       <ul class="classes-list">
         <li><img src="./assets/camel.jpg" alt="Camel"> Camel</li>
+        <li><img src="./assets/dolphin.jpg" alt="Dolphin"> Dolphin</li>
         <li><img src="./assets/koala.jpg" alt="Koala"> Koala</li>
         <li><img src="./assets/orangutan.jpg" alt="Orangutan"> Orangutan</li>
         <li><img src="./assets/snow_leopard.jpg" alt="Snow Leopard"> Snow Leopard</li>
-        <li><img src="./assets/squirrel.jpg" alt="Squirrel"> Squirrel</li>
         <li><img src="./assets/water_buffalo.jpg" alt="Water Buffalo"> Water Buffalo</li>
         <li><img src="./assets/zebra.jpg" alt="Zebra"> Zebra</li>
       </ul>
