--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <div class="col-md-4" style="background-color: #e8dccd; border-radius: 10px; padding: 10px;">
       <h4>Classes</h4>
       <ul class="classes-list">
+        <li><img src="./assets/arctic_fox.jpg" alt="arctic_fox"> Arctic Fox</li>
         <li><img src="./assets/camel.jpg" alt="Camel"> Camel</li>
         <li><img src="./assets/dolphin.jpg" alt="Dolphin"> Dolphin</li>
         <li><img src="./assets/koala.jpg" alt="Koala"> Koala</li>
         <li><img src="./assets/orangutan.jpg" alt="Orangutan"> Orangutan</li>
         <li><img src="./assets/snow_leopard.jpg" alt="Snow Leopard"> Snow Leopard</li>
         <li><img src="./assets/water_buffalo.jpg" alt="Water Buffalo"> Water Buffalo</li>
-        <li><img src="./assets/zebra.jpg" alt="Zebra"> Zebra</li>
       </ul>
     </div>
   </div>
